package at.technikum.drivingschool.bookingappbackend.model;

public enum EEventStatus {
    GOOD,
    CANCELED
}
