package at.technikum.drivingschool.bookingappbackend.model;

public enum EEventType {
    THEORY,
    DRIVING,
    FIRST_AID,
    THEORY_EXAM,
    PRACTICAL_EXAM
}
