package at.technikum.drivingschool.bookingappbackend.model;

public enum ERole {
  ROLE_STUDENT,
  ROLE_INSTRUCTOR,
  ROLE_ADMIN
}
